Create immutable collections with List.of, Map.of and Set.of