@@ -2,7 +2,7 @@ package org.openl.rules.webstudio.service;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 import org.springframework.security.core.GrantedAuthority;
@@ -17,7 +17,7 @@ public final class PrivilegesEvaluator {
 
     public static Collection<GrantedAuthority> createPrivileges(Set<Group> groups) {
         if (groups == null || groups.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         var grantedList = new ArrayList<GrantedAuthority>();
         for (Group group : groups) {
