@@ -1,7 +1,6 @@
 package org.openl.studio.tags.service;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.regex.Pattern;
@@ -88,7 +87,7 @@ public class TagTemplateService {
             }
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
     public String validate(String template) {
